
## unreleased

### Added
- Add some text on payment page if registration is set to expire after a delay
- New paid column to registrations export

### Changed
- payment method and texts for Monthey

### Fixed
- Ensure we send confirmation after the payment is done, not when payment page is displayed
- Ensure we don't get stuck expiring already expired registrations


## 3.2.2 - 2023-08-22
### Added
- Display lagapeo number in invoices

### Changed
- Switch postfinance to lightbox mode
- Step labels for Montreux
- Page headings in wizard are now coherent with step labels

### Fixed
- Import of children from Lagapeo
- Typo in Wizard
- Do not send success emails on every webhooks received by postfinance
- Montreux varia


## 3.2.1 - 2023-08-14
### Added
- Postfinance IP check

### Changed
- Webhook handling for postfinance - do not raise 404 errors
- Simplified settings for Oron

### Fixed
- Teacher import
- Issue if no bill is available


## 3.2.0 - 2023-08-10
### Added
- Postfinance payment method


## 3.1.1 -2023-07-07
### Added
- settings for Monthey
- settings for Oron
- More fields to detail export of payroll

### Fixed
- Date input for period dates.
- Update datepicker
- Fix timezone issue
- Import of cities and initial data


## 3.1.0 - 2023-06-14
### Added
- Send paying invoices to accountants if after registration period
- Export of invoices to excel format
- Send confirmation mail to multiple courses
- Send information mail to supervisors of multiple courses

### Fixed
- course creation was not possible if no city override was provided


## 3.0.6 - 2023-05-05
### Fixed
- Creation of future absences when a student moves from one course to another
- Suppression of a message to the user when creating a new period.
- Catch exception when datatrans service is not available
- exception if all mail recipients are invalid


## 3.0.5 - 2023-04-03
### Fixed
- Course start and end dates (not explicit) not editable.
- Non-clickable start and end times

